@@ -4,7 +4,9 @@ if (!defined ('TYPO3_MODE')) 	die ('Access denied.');
 
 	// add flexform
 t3lib_extMgm::addPiFlexFormValue('*', 'FILE:EXT:css_styled_content/flexform_ds.xml','table');
-t3lib_extMgm::addToAllTCAtypes('tt_content','pi_flexform;;;;1-1-1','table');
-
+$TCA['tt_content']['types']['table']['showitem']='CType;;4;button,hidden,1-1-1, header;;3;;2-2-2, linkToTop;;;;4-4-4, 
+			--div--;LLL:EXT:cms/locallang_ttc.xml:CType.I.5, layout;;10;button;3-3-3, cols, bodytext;;9;nowrap:wizards[table], text_properties, pi_flexform,
+			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.access,starttime, endtime';
+													
 t3lib_extMgm::addStaticFile($_EXTKEY,'static/','CSS Styled Content');
 ?>
